@@ -1,3 +1,8 @@
+2018-01-09  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/pages/show_all_results.css (th):
+	Modify table stayles.
+
 2018-01-08  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.css (textarea):
